[project]
name = "tilde"
version = "0.6.1"
description = "A starting point for your home server rabbit hole"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyinfra>=3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=24.8.0",
    "isort>=5.13.2",
]
